raffia/tests/error/scss/at-rule/forward/with-empty.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `)`
  ┌─ with-empty.scss:1:24
  │
1 │ @forward "other" with ();
  │                        ^


